# aries-playground

./: .gitignore  LICENSE  README.md  credential-issue-and-verification-api-user-guide.md  docker-compose-apts.yml  docker-compose-sovrin.yml  docker-compose.yml
apts/src/: aut.py  config.toml
automated-data-agreement/: README.md  credential-issue-and-verification-api-user-guide.md  docker-compose-aarch64-lt.yml  docker-compose-aarch64.yml  docker-compose.yml
automated-data-agreement/docker/: Dockerfile.aarch64  Dockerfile.x86
automated-data-agreement/nginx/ada-conf.d/: acapy.conf  default.conf
cloud-agent/: startup.sh  startup_ngrok.sh  startup_temp.sh
dexa/: README.md  dexa-user-guide.md  docker-compose.yaml
dexa/docker/: Dockerfile  main.py  pyproject.toml
dexa/docker/sample-startup/: dm.yaml  ds.yaml  dus.yaml  individual.yaml
dexa/docker/startup/: dm.yaml  ds.yaml  dus.yaml  individual.yaml
dexa/nginx/dexa-conf.d/: dexa.conf
docker/: Dockerfile.acapy  Dockerfile.indysdk  requirements.txt
nginx/conf.d/: acapy.conf  acapy.template
