[tool.poetry]
name = "dexa-sample"
version = "0.1.0"
description = ""
authors = ["George J Padayatti <george.padayatti@igrant.io>"]

[tool.poetry.dependencies]
python = "^3.8"
dexa-sdk = "^0.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
